modules/webserver/security_groups.tf
resource "aws_security_group" "public_sg" {
  name = "public_sg"
  description = "This will be applied to all the application servers"
  vpc_id = "${var.vpc_id}"

  ingress {
      from_port = 80
      to_port = 80
      protocol = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
      security_groups = ["${aws_security_group.external_sg.id}"]
  }

  ingress {
      from_port = 443
      to_port = 443
      protocol = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
      security_groups = ["${aws_security_group.external_sg.id}"]            
  }
}


resource "aws_security_group" "ssh_sg" {
  name        = "ssh_sg"
  description = "Allow inbound SSH traffic"
  vpc_id      = "${var.vpc_id}"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "TCP"
    cidr_blocks = "${var.ssh_cidr}"
  }

  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
  }
}
